fix: headings and spacing

--- a/src/styles/base/typography.css
+++ b/src/styles/base/typography.css
@@ -33,8 +33,8 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   font-weight: 500;
   line-height: 1.2;
   color: var(--text-high-emphasis);
